[project]
name = "dynamixel-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "supernovatux", email = "thulashitharan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
