[project]
name = "dynamixel-helper"
version = "0.1.0"
description = "dynamixel wrapper for xl series"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "supernovatux", email = "thulashitharan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
]
classifiers = [
   "License :: OSI Approved :: MIT License",
   'License :: OSI Approved :: Apache Software License',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
